--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -2,6 +2,7 @@
 .home-container {
     display: flex;
     height: 100vh;
+    width: 100%;
   }
   
   
@@ -83,6 +84,23 @@
 
   
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
